--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> My Certificate </h1>
- <img src="images/">
-    
-</body>
-</html>
+<img src="images/https://github.com/ritesh975/All-Certificate-/blob/main/Certificate/1718098498066-certificate.png">
+<img src="images/https://github.com/ritesh975/All-Certificate-/blob/main/Certificate/Course-Certificate.jpg.png">
+<img src="images/https://github.com/ritesh975/All-Certificate-/blob/main/Certificate/IMG-20240709-WA0001.jpg"> 
+</body></html>
